# bnb

./: Cargo.toml  README.md  TODO.md
src/: creature.rs  demo.rs  game.rs  main.rs  scenario.rs  scenario_map.rs
src/figure/: ai.rs  attack.rs  condition.rs  health.rs  mod.rs  modifier.rs  movement.rs
src/player/: action.rs  mod.rs
src/scenario/: command.rs  map.rs  mod.rs
