[package]
name = "bnb"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31"
hexx = { git = "https://github.com/ManevilleF/hexx", features = ["bevy"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
